# foodiegram

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  extract.py  instagram.py  package-lock.json  package.json  plan.md  pyproject.toml  recipe-browser.html  repr.py
.cursor/: rules
public/: analytics.html  app.js  foodiegram.html  index.html  login.html  mobile.html  planner.html  recipe.html  redirect.html  styles.css
scripts/: backfill_base_servings.py  extract_recipes.py  fetch_missing_posts.py  fix_cdn_thumbnails.py  import_existing.py  ingest_igbulkdl.py  instagram_login.py  migrate_recipes.py  upload_thumbnails.py
src/cookstagram/: analyzer.py  cache_manager.py  classifier.py  instageram_extractor.py  types.py
src/cookstagram/prompts/: extract_details.md
src/foodiegram/: __init__.py  _auth.py  analyzer.py  api.py  api_models.py  cache_manager.py  env.py  instageram_extractor.py  master_recipe_extractor.py  recipe_extractor.py  repository.py  settings.py  types.py
src/foodiegram/domain/: __init__.py  enums.py  errors.py  models.py  synonyms.py
src/foodiegram/prompts/: details.md  extract_details.md  extract_recipe_details.txt  is_recipe.md
src/v1/: implementations.py  recipe_extractor.py  usage.py
src/v1.5/: analyzer.py  extract.py  extraction_history.py  guide.md  recipe_analyzer.py
tests/: test_settings.py
ui/: app.js  index.html  recipe.html  recipe.js  styles.css
