[project]
name = "foodiegram"
version = "0.1.0"
description = "Extract, parse, and tag recipes from your instagram saved collections"
readme = "README.md"
authors = [
    { name = "Ester Beltrami", email = "beltrami.ester@gmail.com" }
]
keywords = ["instagram", "recipes", "ocr", "nlp", "data-extraction"]
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "instagrapi>=2.2.1",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[openai]>=0.7.2",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
foodiegram = "foodiegram:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 89
fix = true
# Standalone reference artifacts that are not part of the package.
extend-exclude = ["Recipe Management System Architecture", "cookstagram-data"]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
"D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/
"D203", # https://docs.astral.sh/ruff/rules/incorrect-blank-line-before-class/
"D213", # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
]
[tool.ruff.lint.per-file-ignores]
# Standalone migration/utility scripts are not an importable package.
"scripts/*" = ["INP001"]
# `assert` and hardcoded test credentials are the expected idiom in tests.
"tests/*" = ["S101", "S105", "S106"]
# Client and Settings are used at runtime (class attrs + property body), not just annotations.
"src/foodiegram/instageram_extractor.py" = ["TC001", "TC002"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
files = ["src", "tests"]

# instagrapi ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = ["instagrapi.*"]
ignore_missing_imports = true

[tool.uv.sources]
instagrapi = { path = "../instagrapi", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
